--- a/microsite/microsite.css
+++ b/microsite/microsite.css
@@ -109,15 +109,10 @@ h1 {
 }
 
 H2  {
-    font-family: cursive;
+    font-family: sans-serif;
     text-align: center;
     font-style: italic;
     font-size: 300px;
-    color: aliceblue;
-    
-}
-
-H2:hover {
     color: aqua;
     animation: shake 0.5s; 
     animation-iteration-count: infinite; 
@@ -144,8 +139,9 @@ P {
 }
 
 H3 {
+    font-family: sans-serif;
     text-align: center;
-    font-size: 200px;
+    font-size: 300px;
 }
 
 p2 {
@@ -154,6 +150,42 @@ p2 {
     left: 1040px;
     text-align: right;
     margin-top: 10px;
-    
-    
+      
 }
+
+body { background-color:#333; }
+#snow{
+	background: none;
+	background-image: url('http://www.wearewebstars.dk/codepen/img/s1.png'), url('http://www.wearewebstars.dk/codepen/img//s2.png'), url('http://www.wearewebstars.dk/codepen/img//s3.png');
+	height: 50%;
+	left: 0;
+	position: absolute;
+    bottom: 0;
+	width: 100%;
+	z-index:1;
+	-webkit-animation: snow 10s linear infinite;
+	-moz-animation: snow 10s linear infinite;
+	-ms-animation: snow 10s linear infinite;
+	animation: snow 10s linear infinite;
+}
+@keyframes snow {
+  0% {background-position: 0px 0px, 0px 0px, 0px 0px;}
+  50% {background-position: 500px 500px, 100px 200px, -100px 150px;}
+  100% {background-position: 500px 1000px, 200px 400px, -100px 300px;}
+}
+@-moz-keyframes snow {
+  0% {background-position: 0px 0px, 0px 0px, 0px 0px;}
+  50% {background-position: 500px 500px, 100px 200px, -100px 150px;}
+  100% {background-position: 400px 1000px, 200px 400px, 100px 300px;}
+}
+@-webkit-keyframes snow {
+  0% {background-position: 0px 0px, 0px 0px, 0px 0px;}
+  50% {background-position: 500px 500px, 100px 200px, -100px 150px;}
+  100% {background-position: 500px 1000px, 200px 400px, -100px 300px;}
+}
+@-ms-keyframes snow {
+  0% {background-position: 0px 0px, 0px 0px, 0px 0px;}
+  50% {background-position: 500px 500px, 100px 200px, -100px 150px;}
+  100% {background-position: 500px 1000px, 200px 400px, -100px 300px;}
+}	
+
