--- a/Catalog.css
+++ b/Catalog.css
@@ -24,7 +24,7 @@
     height: 100px;
     top: 150px;
     left: 20px;
-    background-image: url('project_01.jpg');
+    background-image: url('Catalog/project_01.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: top;
@@ -37,7 +37,7 @@
     height: 100px;
     top: 300px;
     left: 200px;
-    background-image: url('project_02.png');
+    background-image: url('Catalog/project_02.png');
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -49,7 +49,7 @@
     height: 100px;
     top: 450px;
     left: 20px;
-    background-image: url('project_03.png');
+    background-image: url('Catalog/project_03.png');
     background-repeat: no-repeat;
     background-size: cover;
    
@@ -62,7 +62,7 @@
     height: 100px;
     top: 100px;
     left: 500px;
-    background-image: url('project_04.png');
+    background-image: url('Catalog/project_04.png');
     background-repeat: space;
     background-size: cover;
     background-position: top;
@@ -75,7 +75,7 @@
     height: 100px;
     top: 500px;
     left: 500px;
-    background-image: url('project_05.png');
+    background-image: url('Catalog/project_05.png');
     background-repeat: round;
     background-size: contain;
 }
@@ -87,7 +87,7 @@
     height: 100px;
     top: 300px;
     left: 750px;
-    background-image: url('Exercise_01.png');
+    background-image: url('Catalog/Exercise_01.png');
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -99,7 +99,7 @@
     height: 100px;
     top: 150px;
     left: 1000px;
-    background-image: url('Exercise_02.png');
+    background-image: url('Catalog/Exercise_02.png');
     background-repeat: round;
     background-size: cover;
 }
@@ -111,7 +111,7 @@
     height: 100px;
     top: 450px;
     left: 1000px;
-    background-image: url('Exercise_03.png');
+    background-image: url('Catalog/Exercise_03.png');
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -123,24 +123,11 @@
     height: 100px;
     top: 300px;
     left: 1300px;
-    background-image: url(Exercise_04.png);
+    background-image: url(Catalog/Exercise_04.png);
     background-repeat: repeat;
     background-size: contain;
     background-position: center;
    
-}
-
-.img10 {
-    position: absolute;
-    border-radius: 50%;
-    width: 400px;
-    height: 100px;
-    top: 100px;
-    left: 1500px;
-    background-image: url('');
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-color: aliceblue;
 }
 
 .img11 {
@@ -150,7 +137,7 @@
     height: 100px;
     top: 500px;
     left: 1500px;
-    background-image: url('Exercise_06.png');
+    background-image: url('Catalog/Exercise_06.png');
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center;
@@ -164,7 +151,7 @@
     height: 100px;
     top: 300px;
     left: 1850px;
-    background-image: url('Exercise_07.png');
+    background-image: url('Catalog/Exercise_07.png');
     background-repeat: repeat;
     background-size: cover;
     background-position: center;
@@ -178,7 +165,7 @@
     height: 100px;
     top: 150px;
     left: 2000px;
-    background-image: url('AbstractGrid.png');
+    background-image: url('Catalog/AbstractGrid.png');
     background-repeat: repeat;
     background-size: cover;
     
@@ -192,7 +179,7 @@
     height: 100px;
     top: 450px;
     left: 2000px;
-    background-image: url('Exercise_09.png');
+    background-image: url('Catalog/Exercise_09.png');
     background-repeat: repeat;
     background-size: cover;
     background-position: center;
